<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:text="@string/status_tracking"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/stopButton"
        />


    <Button
        android:id="@+id/stopButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/button_selector"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/stop_tracking_session"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/purgeButton"
        />


    <Button
        android:id="@+id/purgeButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textStyle="bold"
        android:background="@android:color/holo_red_dark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/purge_tracking_session"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        />

</RelativeLayout>